cmake_minimum_required(VERSION 3.5)
project(test)
set(CMAKE_CXX_STANDARD  11)
#add_executable(main test_HeightSort.cpp)
#add_executable(main get_int_digit.cpp)
#add_executable(main test-operator-new-overload.cpp)
#add_executable(main test-constructor.cpp)
#add_executable(main test-operator-new-global.cpp)
#add_executable(main test-typeid.cpp)
#add_executable(main test-virtual.cpp)
#add_executable(main test-enum-class.cpp)
#add_executable(main test-class-member-pointer.cpp)
#add_executable(main test-reverse-list.cpp)
#add_executable(main test-fast-sort.cpp)
#add_executable(main test-heap-sort.cpp)
#add_executable(main test-Args....cpp)
#add_executable(main test-method-delete.cpp)
#add_executable(main test-derived.cpp)
#add_executable(main test-qiyuan.cpp)
#add_executable(main test-virtual-table.cpp)
#add_executable(main test-binary-tree-depth.cpp)
#add_executable(main test-guibin-sort.cpp)
add_executable(main test-vertor-reserve.cpp)