cmake_minimum_required(VERSION 3.5)
project(test_fast_sort)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED True)
set(CXX_STANDARD_REQUIRED 20)
#add_executable(main test-return-const.cpp)
#add_executable(main test-static_cast.cpp)
#add_executable(main test-value-init.cpp)
#add_executable(main test-return-reference*this.cpp)
#add_executable(main test-pointer-to-virtual-table.cpp)
#add_executable(main test-implicit-type-cast.cpp)
add_executable(main test-operator米-rtn.cpp)
#add_executable(main test-shared-ptr.cpp)
#add_executable(main test-template-template.cpp)
#add_executable(main test-type-cast.cpp)
#add_executable(main test-Derived-Base-address.cpp)
#add_executable(main test-static_cast<base-class>.cpp)
#add_executable(main test-template.cpp)