cmake_minimum_required(VERSION 3.5)
project(test_fast_sort)
set(CMAKE_CXX_STANDARD 20)
set(CXX_STANDARD_REQUIRED 20)
# add_executable(main test_fast_sort2.cpp)
# add_executable(main test_ELGB.cpp)
# add_executable(main Dijkstra.cpp)
# add_executable(main iland.cpp)
# add_executable(main qiyuan.cpp)
# add_executable(main test_string.cpp)
# add_executable(main container.cpp)
# add_executable(main set.cpp)
# add_executable(main allocator.cpp)
# add_executable(main allocator_main.cpp)
# add_executable(main overload_new_delete.cpp)
# add_executable(main virtual_destruct.cpp)
# add_executable(main shared_ptr.cpp)
# add_executable(main function_ptr.cpp)
# add_executable(main pointer_member_func.cpp)
# add_executable(main std_enable_if.cpp)
# add_executable(main std_declval.cpp)
# add_executable(main std_lvalue_rvalue_reference.cpp)
# add_executable(main polymorphic.cpp)
# add_executable(main virtual_inherit.cpp)
# add_executable(main test_shared_ptr.cpp)
# add_executable(main test_queue.cpp)
# add_executable(main test_struct_default_constructor.cpp)
# add_executable(main test_virtual_derive.cpp)
# add_executable(main virtual_method.cpp)
# add_executable(main leftvalue_assignment.cpp)
# add_executable(main init_base_datamember.cpp)
# add_executable(main test_protected_private.cpp)
# add_executable(main test_move_construct.cpp)
# add_executable(main pure_virtual_class.cpp)
# add_executable(main type_convert.cpp)
# add_executable(main test_friend.cpp)
# add_executable(main test_friend_derive.cpp)
# add_executable(main test_derive_derive.cpp)
# add_executable(main test_virtual_destruct.cpp)
# add_executable(main test_constructor.cpp)
# add_executable(main test_func_pointer.cpp)
# add_executable(main test_right_refer.cpp)
#add_executable(main test-dijkstra.cpp)
# add_executable(main test_virtual_table.cpp)
# add_executable(main test_vector.cpp)
# add_executable(main test-define.cpp)
# add_executable(main test-c-arr.cpp)
# add_executable(main test-const.cpp)
add_executable(main vector《vector《int》》init.cpp)