cmake_minimum_required(VERSION 3.5)
project(test_template_func_decl)
set(CMAKE_CXX_STANDARD 20)
set(CXX_STANDARD_REQUIRED 20)
#add_executable(main test_template_func_decl.cpp template1.cpp template2.cpp)
#add_executable(main test-strlen-sizeof.cpp)
#add_executable(main test-sizeof.cpp)
#add_executable(main test-destruct.cpp)
#add_executable(main test-template-float.cpp)
add_executable(main test-template-class.cpp)
#add_executable(main test-template-alias.cpp)